    [Greg Sabino Mullane]

  - Improve the push_rows() function, and use ANY(?) whenever possible.
    [Greg Sabino Mullane]

  - Log the version of all loaded modules.
    [Greg Sabino Mullane]

  - Add basic support for Firebird as a target database type.
    [Greg Sabino Mullane]

  - Allow commas in the list for conflict_strategy.
    [Greg Sabino Mullane]


Bucardo version 5.4.1, released September 26, 2015

  - Ensure all sequences used in the bucardo database are in the bucardo schema.
    [Greg Sabino Mullane]


Bucardo version 5.4.0, released August 6, 2015 (git commit a0eff9f6558cc2c6b19e4e675604250ad00ce420)

  - Allow dashes in valid schema and table names
    [David Christensen]

  - New command "bucardo delta [syncname...]" to show number of pending 
    delta rows on source databases.
    [Greg Sabino Mullane]

  - Fix incorrect usage of the 'dbconn' parameter in the bucardo.db table
    [Greg Sabino Mullane, reported by Alexandre Busquets]

  - Fix case where VAC sometimes skipped databases used in multiple syncs.
    [Greg Sabino Mullane, reported by Andrey Solovjov]

  - Adjustments for new version of ExtUtils::MakeMaker
    [Mathieu Arnold]

  - When doing target deletes, use the quoted version of the primary key column names.
    [Greg Sabino Mullane]

  - Make sure we do not signal other syncs during makedelta runs if the other 
    syncs are inactive or have autokick off.
    [Greg Sabino Mullane]

  - Allow code with 'array_agg' to work on Postgres <= 8.2,
    along with many other minor changes to support older versions.
    [Greg Sabino Mullane]

  - Add new internal function bucardo_purge_delta_oid which helps the 
    VAC process work better on older versions of Postgres (<= 8.2)
    [Greg Sabino Mullane]

  - Add new function bucardo_purge_sync_track which removes all track 
    and delta entries for a given sync. Use with care.
    [Greg Sabino Mullane]
