@@ -64,7 +64,7 @@
 <li><p>DBIx::Safe ## Try &#39;yum install perl-DBIx-Safe&#39; or visit bucardo.org</p>
 
 </li>
-<li><p>boolean</p>
+<li><p>boolean (only if using MongoDB)</p>
 
 </li>
 </ul>
