@@ -25,6 +25,9 @@ Bucardo version ???
   - Allow commas in the list for conflict_strategy.
     [Greg Sabino Mullane]
 
+  - Remove 'boolean' as a global dependency, only require it for MongoDB use
+    [Greg Sabino Mullane]
+
 
 Bucardo version 5.4.1, released September 26, 2015
 
